# baloo-mujoco-sim

./: .gitignore  LICENSE  README.md  baloo.xml  baloo_adaptive_joint_control.py  baloo_mj_api.py  baloo_sim_loop.py  generate_baloo_sim.py  generate_tactile_sleeve_sim.py  install.sh  mrac_solve_ivp.py  params.yaml  pyproject.toml  requirements.txt  sample_tactile_sensor.xml  setup.cfg  setup.py  simulate_tactile_sleeve_with_viz.py  single_joint.xml  test_mesh.xml  two_link_planar_arm.py  two_link_planar_arm_regressor.ipynb  two_link_planar_arm_statespace.py
baloo_mujoco_sim/: __init__.py
baloo_mujoco_sim.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
baloo_mujoco_sim/assets/: baloo.xml  baloo_v1.0.1.xml
baloo_mujoco_sim/controllers/: MUJOCO_LOG.TXT  baloo_adaptive_joint_control.py
baloo_mujoco_sim/utils/: baloo_mj_api.py  generate_baloo_xml.py  mjData_plotter.py
data/: MuJoCo-Realtime-factor.csv  realtime_factor.ipynb
data/baloo_rl_paper/: universal_joint_kinematics_plots.ipynb
data/kinematics/: universal_joint_kinematics_plots.ipynb
data/realtime-factor/: realtime_factor.ipynb
examples/: baloo_sim_loop.py
inverse_kinematics/: ik.py
mwe/: mwe.xml  stl_bug_example.py
plugin/: CMakeLists.txt  README.md
plugin/actuator/: CMakeLists.txt  accelstepper.ipynb  baloo_elevator.hpp  quintic.cc
plugin/blankPlugin/: CMakeLists.txt  blank_plugin.cpp  blank_plugin.hpp  register.cpp
plugin/blankSensorPlugin/: CMakeLists.txt  blank_plugin.cpp  blank_plugin.hpp  plugin.py  register.cpp  touch_grid.xml
plugin/joint_angle_estimator/: CMakeLists.txt  joint_angle_estimator.cpp  readme.md
plugin/motion_profile_servo/: CMakeLists.txt  MotionProfileServo.cpp  MotionProfileServo.hpp  register.cpp
plugin/ruckig_actuator/: CMakeLists.txt  README.md  RuckigActuator.cpp  RuckigActuator.hpp  register.cpp
scripts/: generate_baloo_xml.py  params.yaml  test.py
single_dof/: 1dof.xml  generate_single_dof.py
single_joint/: MUJOCO_LOG.TXT  baloo_adaptive_cartesian_control.py  bellows_base.py  cartesian_adaptive_control.py  environments.py  four_bellows.py  four_bellows.xml  generate_single_joint.py  grub_adaptive_control.py  grub_data_plotting.ipynb  grub_pid.py  grub_pressure_ramp.py  params.yaml  plotter.py  position_adaptive_control.py  position_pid_control.py  single_joint.xml
src/baloo_mujoco_sim/: __init__.py
src/baloo_mujoco_sim/assets/: baloo_v0.1.0.xml  baloo_v0.2.0.xml  baloo_v1.0.1.xml  params.yaml
src/baloo_mujoco_sim/controllers/: baloo_open_loop.py
src/baloo_mujoco_sim/controllers/PID/: PIDHugger  PIDHugger.py  README.md  evaluate_PID  view_openloop
src/baloo_mujoco_sim/controllers/mpc/: mpc_controller.py
src/baloo_mujoco_sim/utils/: baloo_mj_api.py  generate_baloo_xml.py  mjData_plotter.py
tactile_sensors/: simulate_sample_tactile_sensor.py  tactile_sleeve.xml  touch_grid.xml
testing_mjcf/: stuff.py  upper_body.xml
utils/: mjData_plotter.py
