[tool.poetry]
name = "baloo-mujoco-sim"
version = "0.2.0"
description = "A MuJoCo simulation for Baloo"
authors = ["Curtis <curtiscarljohnson@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8, <3.12"
mujoco = "3.2.3"
numpy = "1.24.3"
scipy = "1.10.1"
dm-control = "1.0.22"
regex = "^2024.9.11"
toml = "^0.10.2"
PyYAML = "^6.0.2"
matplotlib = "3.7.5"

[tool.poetry.scripts]
run-baloo-sim = "baloo_mujoco_sim.controllers.baloo_open_loop:main"
generate-baloo-xml = "baloo_mujoco_sim.utils.generate_baloo_xml:generate_xml"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
