[project]
name = "baloo-mujoco-sim"
version = "0.2.0"
description = "A MuJoCo simulation for Baloo"
readme = "README.md"
authors = [
    {name = "Curtis", email = "curtiscarljohnson@gmail.com"},
]
requires-python = "<3.12,<4.0,>=3.8"
dependencies = [
    "mujoco==3.2.3",
    "numpy==1.24.3",
    "scipy==1.10.1",
    "dm-control==1.0.22",
    "regex<2025.0.0,>=2024.9.11",
    "toml<1.0.0,>=0.10.2",
    "PyYAML<7.0.0,>=6.0.2",
    "matplotlib==3.7.5",
]

[project.scripts]
run-baloo-sim = "baloo_mujoco_sim.controllers.baloo_open_loop:main"
generate-baloo-xml = "baloo_mujoco_sim.utils.generate_baloo_xml:generate_xml"

[tool.uv]
package = true